--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
-  dotted_border: ^2.0.0+3
   shared_preferences: ^2.0.17
   sqflite: ^2.2.3
   path_provider: ^2.0.11
   path: 
   provider: ^6.0.5
   get: ^4.6.5
+  get_storage: ^2.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
